--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="com.example.cloudcomputing.MainActivity">
+    app:startDestination="@+id/FirstFragment">
 
+    <fragment
+        android:id="@+id/FirstFragment"
+        android:name="com.example.cloudcomputing.MainActivity"
+        android:label="@string/first_fragment_label"
+        tools:layout="@layout/content_main">
+
+    </fragment>
 </navigation>
