--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -17,8 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Create a New Note"
-            android:textSize="10pt" />
+            android:text="NEW NOTE"
+            android:textSize="14pt" />
 
         <EditText
             android:id="@+id/name"
@@ -58,7 +58,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/teal_700"
             android:text="Add image" />
 
         <Button
@@ -67,7 +67,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:backgroundTint="#009688"
+            android:backgroundTint="@color/purple_700"
             android:text="Add Note" />
 
         <Button
@@ -76,7 +76,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:backgroundTint="#FFC107"
+            android:backgroundTint="@color/purple_200"
             android:text="Cancel" />
 
     </LinearLayout>
