--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
         android:id="@+id/fabAuth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="bottom|end"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|center"
         android:layout_margin="@dimen/fab_margin"
         android:contentDescription="@string/device_button_title"
         android:src="@drawable/ic_baseline_lock"
@@ -36,14 +36,14 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
-        android:layout_width="wrap_content"
+        android:layout_width="154dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="bottom|end"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|center"
         android:layout_margin="@dimen/fab_margin"
-        android:visibility="invisible"
         android:src="@drawable/ic_baseline_post_add"
+        android:visibility="invisible"
         app:fabCustomSize="60dp"
-        app:fabSize="auto"/>
+        app:fabSize="auto" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
