--- a/app/src/main/res/layout/content_note.xml
+++ b/app/src/main/res/layout/content_note.xml
@@ -7,14 +7,14 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:padding="8dp"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:padding="10dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher_background" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="5dp"
@@ -22,18 +22,18 @@
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="match_parent"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/description"
-            android:layout_width="match_parent"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textSize="15sp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 </LinearLayout>
