--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -13,16 +13,16 @@
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/title2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="NEW NOTE"
+            android:text="EDIT NOTE"
             android:layout_gravity="center"
             android:textSize="14pt" />
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/name2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -31,7 +31,7 @@
             android:lines="5" />
 
         <EditText
-            android:id="@+id/description"
+            android:id="@+id/description2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -40,7 +40,7 @@
             android:lines="3" />
 
         <Button
-            android:id="@+id/captureImage"
+            android:id="@+id/captureImage2"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
 
         <!-- after the description EditText -->
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/image"
+            android:id="@+id/image2"
             android:layout_width="match_parent"
             android:layout_height="280dp"
             android:layout_margin="16dp"
@@ -64,15 +64,16 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/addNote"
+            android:id="@+id/addNote2"
+
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/purple_700"
-            android:text="Add Note" />
+            android:text="Edit Note" />
 
         <Button
-            android:id="@+id/cancel"
+            android:id="@+id/cancel2"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
